_sass/1_core/typography.scss
html {
	font-size: 16px;
}
body {
	font-size: $fontSize-md;
	font-family: $font-sans;
	line-height: $font-lineHeight;
	color: $text-dark;
	@include antialiased();
}
h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4 {
	line-height: $font-lineHeight-header;
	p {
		margin-top: $spacing-xxs;
		max-width: none;
	}
}
h1,
.h1 {
	position: relative;
	font-family: $font-header;
	font-size: 48px;
	font-weight: 200;
	line-height: 1;
	text-align: left;
	max-width: 1024px;
}
h2,
.h2 {
	font-family: $font-sans;
	font-size: 2rem;
	font-weight: 600;
}
h3,
.h3 {
	font-family: $font-serif-header;
	font-size: 1.5rem;
	font-weight: 500;
}
.h3--alt {
	font-family: $font-serif;
	font-weight: 400;
	font-style: italic;
}
h4,
.h4 {
	font-size: 1.25rem;
	font-weight: 600;
}
h5,
.h5 {
	font-size: inherit;
	font-weight: 600;
}
.text-lg {
	font-size: $fontSize-xl;
}
.text-sm {
	font-size: $fontSize-sm;
}
// .text-xl {
// 	font-size: $fontSize-xl;
// }
p {
	margin-top: 1em;
	max-width: $container-sm;
	&:first-child {
		margin-top: 0;
	}
}
strong {
	font-weight: 600;
}
em {
	font-style: italic;
	font-family: $font-serif;
	letter-spacing: $letterSpacing-condensed;
}

blockquote {
	margin: $spacing-lg auto 0;
	color: $background;
	background: $text-dark;
	max-width: $container-sm;
	padding: $spacing-lg;
	font-size: 1.25rem;
	font-style: italic;
	strong {
		display: block;
		font-style: normal;
		text-align: right;
	}
	a {
		color: inherit;
		text-decoration: underline;
	}
}

@media (min-width: $media-lg) {
	body {
		font-size: $fontSize-lg;
	}
	h1 {
		font-size: 6rem;
		font-weight: 100;
	}
	h2,
	.h2 {
		font-size: 48px;
	}
	h3,
	.h3 {
		font-size: 2rem;
	}
	h4,
	.h4 {
		// font-size: 1.px;
	}
	.text-sm {
		font-size: $fontSize-md;
	}
}

